fixing extra spaces

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -287,11 +287,13 @@ svg {
 /* ------- SKILLS ------ */
 
 .skills ul {
-  min-height: 100px;
-  padding: 30px 0px 30px var(--padd-main-v);
+  min-height: 300px;
+  padding: 30px 0px 30px calc(2* var(--padd-main-h));
   list-style-type: none;
   text-transform: uppercase;
-  font-size: 3.5rem;
+  font-size: 2rem;
+  line-height: 2.6rem;
+  align-items: left; //O QUE CONTROLA o alinhamento das palavras
   text-align: left;
   margin-left: 0px;
   color: var(--white);
@@ -698,7 +700,12 @@ ul {
   }
 
   .skills ul {
+    min-height: 300px;
+    margin: 0 auto;
+    padding: 0;
     margin: 0;
+    font-size: 3.5rem;
+    line-height: 4.8rem;
   }
 
   .skills li {
@@ -922,6 +929,8 @@ ul {
   
 
   .skills ul {
+      min-height: 80px;
+      padding: 0;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
